nickel-lang/tests/integration/fail/records/merge_different_vals_no_priority.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
({ a = 1 } & { a = 2 }).a
